samples/_failures_safe/1761214462_baddb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1217f1d5.c: In function ‘main’:
./samples/SAFE/__tmp_1217f1d5.c:150:20: error: missing terminating " character
  150 |             printf("Failed to parse
      |                    ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1217f1d5.c:150:13: error: expected expression at end of input
  150 |             printf("Failed to parse
      |             ^~~~~~
./samples/SAFE/__tmp_1217f1d5.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1217f1d5.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1217f1d5.c:150:13: error: expected declaration or statement at end of input
